--- a/app/style.css
+++ b/app/style.css
@@ -53,8 +53,8 @@ h2.notBot { background:url(images/itsNotBot-butYouAre.jpg) no-repeat; display:bl
 #mainContent p.text { font:normal 11px/18px Tahoma; margin:23px auto 0 35px; width:403px; }
 #mainContent p.text a { color:#07a6da; display:block; }
 #mainContent p.text a.inline { color:#ffc821; display:inline; } /*added*/
-#mainContent p.title { color:#fccd06; font:bold 16px Helvetica; margin-bottom:35px; text-transform:uppercase; }
-#mainContent p.title span { color:#fff; font:bold 16px Helvetica; text-transform:none; }
+#mainContent p.title { color:#fccd06; font:bold 16px Arial; margin-bottom:35px; text-transform:uppercase; }
+#mainContent p.title span { color:#fff; font:bold 16px Arial; text-transform:none; }
 #mainContent img { display:block; margin:0 auto; }
 #mainContent .left img { margin:35px 20px 0 28px; }
 #mainContent .left img.small { margin:5px 20px 0 28px; }
@@ -64,7 +64,7 @@ h2.notBot { background:url(images/itsNotBot-butYouAre.jpg) no-repeat; display:bl
 #mainContent a.invite { background:url(images/invite-friends.png) no-repeat; display:block; height:28px; margin:10px auto 0; text-indent:-9999px; width:254px; }
 .titleBar { background:url(images/this-week-bot-prize.png) no-repeat; height:37px; text-indent:-9999px; width:383px; }
 .redeemiPad { background:#e30065; margin:35px 0 130px 35px; padding:8px 0; text-align:center; text-transform:uppercase; width:226px; }
-.redeemiPad a { color:#fff; font:bold 18px Helvetica; text-decoration:none; }
+.redeemiPad a { color:#fff; font:bold 18px Arial; text-decoration:none; }
 .desc { margin:90px 0 0; }
 #mainContent .desc p { margin:0; padding:0; width:600px; }
 /* =================================
@@ -77,9 +77,9 @@ h2.notBot { background:url(images/itsNotBot-butYouAre.jpg) no-repeat; display:bl
 .popupInvite h2 span { color:#3f5a8f; display:block; font:bold 13px Arial; padding:13px 30px; }
 .popupContent { margin:15px 30px; padding:0; }
 #mainContent .popupContent img { margin:0 10px 0 0; }
-.popupInvite h3 { color:#3f5a8f; font:bold 14px Helvetica; }
-.popup h3 { color:#3f5a8f; font:bold 15px Helvetica; margin:30px 0 0 40px; }
-#mainContent .popup p { color:#5f5f5f; font:bold 12px/18px Helvetica; margin:0 0 0 40px; width:290px; }
+.popupInvite h3 { color:#3f5a8f; font:bold 14px Arial; }
+.popup h3 { color:#3f5a8f; font:bold 15px Arial; margin:30px 0 0 40px; }
+#mainContent .popup p { color:#5f5f5f; font:bold 12px/18px Arial; margin:0 0 0 40px; width:290px; }
 #mainContent .popupInvite p { color:#5f5f5f; display:block; font:normal 10px/18px Helvetica; margin:0; width:256px; }
 .popup a { background:url(images/close.png) no-repeat; display:block; height:26px; margin:17px 0 0 0; text-indent:-9999px; width:49px; }
 .popupInvite a { background:url(images/send.jpg) no-repeat; clear:both; display:block; height:21px; margin:0 7px 0 0; text-indent:-9999px; width:45px; }
@@ -96,7 +96,7 @@ label { font:normal 12px Trebuchet MS; }
 #form .zip { width:104px; }
 #form div { float:left; margin:0 0 15px 0; }
 #submit { clear:both; }
-#submit input { background:#e30065; border:none; font:bold 20px Helvetica; margin:10px 0 0 0; padding:7px 7px 4px 7px; text-transform:uppercase; cursor: pointer; }
+#submit input { background:#e30065; border:none; font:bold 20px Futura; margin:10px 0 0 0; padding:7px 7px 4px 7px; text-transform:uppercase; cursor: pointer; }
 /* =================================
 				FOOTER
 ==================================== */
@@ -127,7 +127,7 @@ z-index: 20;
 }
 #mainContent p.title a {
 color: #FCCD06;
-font: bold 16px Helvetica;
+font: bold 16px Arial;
 margin-bottom: 35px;
 position: relative;
 text-decoration: none;
@@ -179,14 +179,14 @@ h2.congrats_not { background:url(images/youstillwon-title.png) no-repeat; margin
 	text-align: center;
 }
 #clickToRedeem {
-	background-color: #ec0878;
 	width: 160px;
 	height: 30px;
 	line-height: 30px;
 	padding: 1px;
-	margin: 0 auto;
+	margin: 0;
 	position: relative;
-	top: 400px;
+	top: 450px;
+	left: 215px;
 }
 
 #clickToRedeem a {
