--- a/app/style.css
+++ b/app/style.css
@@ -195,3 +195,19 @@ h2.congrats_not { background:url(images/youstillwon-title.png) no-repeat; margin
  color: #ffffff;
  text-decoration: none;
 }
+
+#inviteContainer {
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 3;
+	text-align: center;
+}
+#inviteFrame {
+	width: 624px;
+	height: 550px;
+	margin: 0;
+	position: relative;
+	top: 150px;
+}
