--- a/app/style.css
+++ b/app/style.css
@@ -1,10 +1,16 @@
 body {
+	overflow-x: hidden;
+	overflow-y: hidden;
 	background:#000;
 	color:#fff;
 	font:13px/18px Tahoma;
 	margin:0 auto;
 	padding:0;
 	position:relative;
+}
+html {
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 /**************************************************** GLOBAL STYLES ****/
 .clear{ display:block; clear:both; }
