--- a/app/style.css
+++ b/app/style.css
@@ -1,16 +1,18 @@
 body {
-	overflow-x: hidden;
-	overflow-y: hidden;
+
 	background:#000;
 	color:#fff;
 	font:13px/18px Tahoma;
 	margin:0 auto;
 	padding:0;
 	position:relative;
+	overflow-x: none;
+	overflow-y: none;
 }
 html {
-	overflow-x: hidden;
-	overflow-y: hidden;
+	overflow-x: none;
+	overflow-y: none;
+
 }
 /**************************************************** GLOBAL STYLES ****/
 .clear{ display:block; clear:both; }
@@ -63,7 +65,7 @@ h2.notBot { background:url(images/itsNotBot-butYouAre.jpg) no-repeat; display:bl
 #mainContent p.title span { color:#fff; font:bold 16px Arial; text-transform:none; }
 #mainContent img { display:block; margin:0 auto; padding-right: 20px;}
 #mainContent .left img { margin:35px 20px 0 28px; }
-#mainContent .left img.small { margin:5px 20px 0 28px;}
+#mainContent .left img.small { margin:5px 20px 0 28px; }
 .bot { margin:0; position:absolute; top:302px; right:0; } /* Margin and top changed */
 #mainContent a.playBtn { background:url(images/play-btn.png) no-repeat; bottom:505px; height:100px; position:absolute; right:206px; text-indent:-9999px; width:230px; } /* bottom and right changed */
 #container2 #mainContent a.playBtn {background:url(images/play-btn2.png) no-repeat; bottom:550px; height:100px; position:absolute; right:100px; text-indent:-9999px; width:230px; top: 340px} /* Added */
@@ -76,18 +78,28 @@ h2.notBot { background:url(images/itsNotBot-butYouAre.jpg) no-repeat; display:bl
 /* =================================
 				POPUP
 ==================================== */
-.popupContainer { background:#525252; bottom:300px; height:150px; padding:10px; position:absolute; right:30px; width:390px; z-index:1; -moz-border-radius:8px; }
-.popup { background:#fff; border:10px solid #525252; bottom:510px; height:160px; padding:10px; position:absolute; right:55px; width:340px; -moz-border-radius:8px; z-index:1; }
-.popupInvite { background:#fff; height:150px; position:absolute; width:390px; z-index:1; }
+.popupContainer { background: url(http://www.adcontests.com/svedka/app/images/trans-bg.png); bottom:300px; height:150px; padding:10px; position:absolute; right:125px; width:390px; z-index:1; -moz-border-radius:8px; }
+.popup { background: url(http://www.adcontests.com/svedka/app/images/trans-bg.png); bottom:510px; height:160px; padding:10px; position:absolute; right:55px; width:340px; -moz-border-radius:8px; -webkit-border-radius: 8px; z-index:1; }
+.popupInvite { background: url(http://www.adcontests.com/svedka/app/images/trans-bg.png); height:150px; position:absolute; width:390px; z-index:1;  -moz-border-radius:8px; -webkit-border-radius: 8px; padding: 10px; }
 .popupInvite h2 { background:#d4d4d4; height:39px; margin:0; text-indent:inherit; width:390px; }
 .popupInvite h2 span { color:#3f5a8f; display:block; font:bold 13px Arial; padding:13px 30px; }
-.popupContent { margin:15px 30px; padding:0; }
+.popupContent { padding:15px 30px; }
+.popupInvite .popupWrap {
+	padding: 0px;
+	height: 200px;
+}
 #mainContent .popupContent img { margin:0 10px 0 0; }
-.popupInvite h3 { color:#3f5a8f; font:bold 14px Arial; }
-.popup h3 { color:#3f5a8f; font:bold 15px Arial; margin:30px 0 0 40px; }
-#mainContent .popup p { color:#5f5f5f; font:bold 12px/18px Arial; margin:0 0 0 40px; width:290px; }
-#mainContent .popupInvite p { color:#5f5f5f; display:block; font:normal 10px/18px Helvetica; margin:0; width:256px; }
-#closeButton { background:url(images/close.png) no-repeat; display:block; height:26px; margin:17px 0 0 0; text-indent:-9999px; width:49px; }
+.popupInvite h3 { color:#3f5a8f; font:bold 14px "Lucida Grande"; }
+.popup h3 { color:#3f5a8f; font:bold 15px Arial; margin: 0 0 0 25px; }
+#mainContent .popup p { color:#5f5f5f; font:bold 12px/18px "Lucida Grande"; margin:0 0 0 25px; width:290px; }
+#mainContent .popupInvite p { color:#5f5f5f; display:block; font:normal 10px/18px "Lucida Grande"; margin:0; width:246px; }
+#closeButton { background:url(images/close.png) no-repeat; display:block; height:26px; margin:17px 10px 0 0; text-indent:-9999px; width:49px; }
+#popInvite {
+	height: 200px;
+}
+#popInvite .popupInvite {
+	height: 200px;
+}
 .popupInvite a { background:url(images/send.jpg) no-repeat; clear:both; display:block; height:21px; margin:0 7px 0 0; text-indent:-9999px; width:45px; }
 /* =================================
 				FORM
@@ -106,7 +118,7 @@ label { font:normal 12px Tahoma; }
 /* =================================
 				FOOTER
 ==================================== */
-#footer p { font:normal 10px Helvetica; margin:53px auto 0px auto; text-align:center; }
+#footer p { font:normal 10px Helvetica; margin:53px auto 0 auto; text-align:center; }
 #btm { background:url(images/footer-bg.png) repeat-y; height:12px; margin:13px 0 0 0; display: none; }
 
 /* Added by Pupung Budi Purnama to complete itsnotbot.html and itsbot.html */
@@ -173,6 +185,12 @@ z-index: 30;
 	margin-top: 5px;
 }
 
+.popupWrap { /* Added by pupung on 8-sept */
+	background: #fff;
+	height: 130px;
+	padding-top: 30px;
+}
+
 /* =================================
 Viva Additions
 ==================================== */
@@ -187,14 +205,14 @@ h2.congrats_not { background:url(images/youstillwon-title.png) no-repeat; margin
 	text-align: center;
 }
 #clickToRedeem {
-	width: 250px;
-	height: 34px;
+	width: 160px;
+	height: 30px;
 	line-height: 30px;
 	padding: 1px;
-	margin: 0 auto;
+	margin: 0;
 	position: relative;
 	top: 450px;
-	clear: both;
+	left: 215px;
 }
 
 #clickToRedeem a {
