--- a/app/ie.css
+++ b/app/ie.css
@@ -8,43 +8,43 @@ h1 a {
 #container2 .bot {
 	margin:0px 0 0 0; position:absolute; left:310px;
 }
-.round { 
-	background:url(images/play-n-win.png) no-repeat; 
-	display:block; 
-	height:63px; 
-	margin:25px 10px 0 0; 
-	text-indent:-9999px; 
+.round {
+	background:url(http://www.adcontests.com/svedka/app/images/play-n-win.png) no-repeat;
+	display:block;
+	height:63px;
+	margin:25px 10px 0 0;
+	text-indent:-9999px;
 	width:63px;
 }
-#mainContent .desc p { 
-	float:left; 
-	margin:0; 
-	padding:0; 
-	width:200px; 
+#mainContent .desc p {
+	float:left;
+	margin:0;
+	padding:0;
+	width:200px;
 }
-#mainContent p.text { 
-	width:300px !important; 
+#mainContent p.text {
+	width:300px !important;
 }
 #container2 #mainContent {
 	text-align: left;
 }
-.popupContainer { 
+.popupContainer {
 	background: url(http://www.adcontests.com/svedka/app/images/trans-bg.png);
-	bottom:280px; 
-	height:175px; 
-	padding:10px; 
-	position:absolute; 
-	right:30px; 
-	width:390px; 
-	z-index:1; 
-	-moz-border-radius:8px; 
+	bottom:280px;
+	height:175px;
+	padding:10px;
+	position:absolute;
+	right:30px;
+	width:390px;
+	z-index:1;
+	-moz-border-radius:8px;
 }
-.popupInvite { 
-	background:#fff; 
-	height:170px; 
-	position:absolute; 
-	width:390px; 
-	z-index:1; 
+.popupInvite {
+	background:#fff;
+	height:170px;
+	position:absolute;
+	width:390px;
+	z-index:1;
 }
 .desc {
 	width: 250px;
