--- a/app/style.css
+++ b/app/style.css
@@ -66,7 +66,7 @@ h4.notBot { background:url(images/itsNotBot-butYouAre.jpg) no-repeat; display:bl
 #mainContent img { display:block; margin:0 auto; padding-right: 20px;}
 #mainContent .left img { margin:35px 20px 0 28px; }
 #mainContent .left img.small { margin:5px 20px 0 28px; }
-.bot { margin:0; position:absolute; top:302px; right:0; } /* Margin and top changed */
+.bot { margin:0; position:absolute; top:320px; right:0; } /* Margin and top changed */
 #mainContent a.playBtn { background:url(images/play-btn.png) no-repeat; bottom:505px; height:100px; position:absolute; right:206px; text-indent:-9999px; width:230px; } /* bottom and right changed */
 #container2 #mainContent a.playBtn {background:url(images/play-btn2.png) no-repeat; bottom:550px; height:100px; position:absolute; right:100px; text-indent:-9999px; width:230px; top: 340px} /* Added */
 #mainContent a.invite { background:url(images/invite-friends.png) no-repeat; display:block; height:28px; margin:35px auto 0; text-indent:-9999px; width:254px; }
@@ -104,7 +104,7 @@ h4.notBot { background:url(images/itsNotBot-butYouAre.jpg) no-repeat; display:bl
 /* =================================
 				FORM
 ==================================== */
-#form { margin:0 0 0 30px; padding:20px 0 0 0; width:490px; height: 389px } /* Height added */
+#form { margin:0 0 0 30px; /* padding:20px 0 0 0 */; width:490px; height: 304px; padding-top: 26px; } /* Height added */
 label { font:normal 12px Tahoma; }
 #form input, select { background:#000; border:1px solid #fff; color:#fff; display:block; font:normal 12px Tahoma; margin:0 10px 0 0; padding:5px 0 5px 3px; }
 #form .name { width:220px; }
@@ -114,11 +114,11 @@ label { font:normal 12px Tahoma; }
 #form .zip { width:104px; }
 #form div { float:left; margin:0 0 15px 0; }
 #submit { clear:both; }
-#submit input { background: url("images/SubmitBtn.png") no-repeat scroll 0 0 transparent; border:none; font:bold 16px Futura; margin:10px 0 0 0; padding:0; text-transform:uppercase; cursor: pointer; text-indent:-9999px;width:119px;height:37px;}
+#submit input { background: url("images/SubmitBtn.png") no-repeat scroll 0 0 transparent; border:none; font:bold 16px Futura; margin:10px 0 0 0; padding:0; text-transform:uppercase; cursor: pointer; text-indent:-9999px;width:98px;height:30px;}
 /* =================================
 				FOOTER
 ==================================== */
-#footer p { font:normal 10px Helvetica; margin:53px auto 0 auto; text-align:center; }
+#footer p { font:normal 10px Helvetica; margin:90px auto 0 auto; text-align:center; }
 #btm { background:url(images/footer-bg.png) repeat-y; height:12px; margin:13px 0 0 0; display: none; }
 
 /* Added by Pupung Budi Purnama to complete itsnotbot.html and itsbot.html */
